# FastqHeat

./: .flake8  .gitignore  DEVNOTES.md  Makefile  README.md  bitbucket-pipelines.yml  check.py  download.py  fastqheat.py  metadata.csv  metadata.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
fastqheat/: __main__.py  asperaweb_id_dsa.openssh  check.py  click_utils.py  config.conf  config.py  exceptions.py  metadata.py  test_main.py  typing_helpers.py  utility.py
fastqheat/backend/: common.py  failed_output_writer.py
fastqheat/backend/ena/: check.py  download.py  ena_api_client.py  metadata.py
fastqheat/backend/ncbi/: __init__.py  check.py  download.py  metadata.py
fastqheat/ena/: check.py  download.py  ena_api_client.py  metadata.py
fastqheat/ncbi/: check.py  download.py  metadata.py
manage_lists/: filter_list.py
study_info/: check_result.py  get_sra_study_info.py  old_script.py
tests/: fixtures.py  test_input.py
tests/test_metadata/: test_async_ena_client.py  test_ena_client.py
