[tool.poetry]
name = "FastqHeat"
version = "0.0.1"
description = "Helper for downloading metagenomic data from SRA database"
authors = ["Quantori"]

[tool.poetry.dependencies]
python = ">=3.7,<4"
requests = "2.22.0"
urllib3 = "1.25.8"
backoff = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.black]
line-length = 100
skip-string-normalization = true
exclude = '''
(
  /(
      \.git
    | \.venv
  )/
)
'''

[tool.isort]
# To match black's line length
line_length = 100
include_trailing_comma = true
multi_line_output = 3
known_third_party=["pytest", "requests", "urllib3"]

[build-system]
requires = ["poetry-core>=1.0,<1.1"]
build-backend = "poetry.core.masonry.api"
